Final with Analysis

--- a/final.ipynb
+++ b/final.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
     "driver_by_type = city_data.groupby('type').sum()\n",
     "driver_list = []\n",
     "labels = []\n",
-    "for value in a.index:\n",
+    "for value in driver_by_type.index:\n",
     "    count = driver_by_type.loc[value,'driver_count']\n",
     "    driver_list.append(count)\n",
     "    labels.append(value)\n",
@@ -359,46 +359,6 @@
     "\n",
     "# Save Figure\n",
     "plt.savefig('save_figures/Total Drivers % by City Type.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[78, 490, 2405]"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "driver_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1625, 625, 125]"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ride_list"
    ]
   },
   {
